// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration Component renders with default settings should match default settings snapshot 1`] = `
<div>
  <div>
    Mock DataSourceMenu
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrow6"
    >
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
      >
        <form
          class="euiForm"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTitle euiTitle--small"
            >
              <h2>
                Top N queries monitoring configuration settings
              </h2>
            </div>
          </div>
          <div
            class="euiFlexItem"
          >
            <div
              class="euiFlexGrid euiFlexGrid--gutterSmall euiFlexGrid--columns2"
              style="padding: 15px 0px;"
            >
              <div
                class="euiFlexItem"
              >
                <dl
                  class="euiDescriptionList euiDescriptionList--compressed"
                >
                  <dt
                    class="euiDescriptionList__title"
                  >
                    <h3>
                      Metric Type
                    </h3>
                  </dt>
                  <dd
                    class="euiDescriptionList__description"
                  >
                    Specify the metric type to set settings for.
                  </dd>
                </dl>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiFormRow"
                >
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiFormControlLayout euiFormControlLayout--group"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <select
                          aria-label="Metric type"
                          class="euiSelect"
                          id="metricType"
                          required=""
                        >
                          <option
                            value="latency"
                          >
                            Latency
                          </option>
                          <option
                            value="cpu"
                          >
                            CPU
                          </option>
                          <option
                            value="memory"
                          >
                            Memory
                          </option>
                        </select>
                        <div
                          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                        >
                          <span
                            class="euiFormControlLayoutCustomIcon"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m8 6 3 3H5l3-3z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrow2"
    >
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--grow"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiTitle euiTitle--small"
          >
            <h2>
              Statuses for configuration metrics
            </h2>
          </div>
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiText euiText--small"
              >
                <div
                  class="euiText"
                >
                  Latency
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiSpacer euiSpacer--xs"
              />
              <span
                class="euiHealth"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiHealth__icon"
                  focusable="false"
                  height="16"
                  style="fill: rgb(0, 119, 204);"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="8"
                    cy="8"
                    r="4"
                  />
                </svg>
                Enabled
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configuration Component renders with default settings: should match default settings snapshot 1`] = `
<div>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrow6"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiForm"
          >
            <div
              class="euiFlexItem"
            >
              <h2
                class="euiTitle euiTitle--small"
              >
                Top N queries monitoring configuration settings
              </h2>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGrid euiFlexGrid--gutterSmall euiFlexGrid--halves euiFlexGrid--responsive"
                style="padding: 15px 0px;"
              >
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Metric Type
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Specify the metric type to set settings for.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <select
                            aria-label="Metric type"
                            class="euiSelect"
                            id="random_html_id"
                            required=""
                          >
                            <option
                              value="latency"
                            >
                              Latency
                            </option>
                            <option
                              value="cpu"
                            >
                              CPU
                            </option>
                            <option
                              value="memory"
                            >
                              Memory
                            </option>
                          </select>
                          <div
                            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <span
                              class="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoaded euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fill-rule="non-zero"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Enabled
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Enable/disable top N query monitoring by latency.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiSwitch euiSwitch--primary"
                      >
                        <button
                          aria-checked="true"
                          aria-label="Enable metric"
                          aria-labelledby="random_html_id"
                          class="euiSwitch__button"
                          data-test-subj="top-n-metric-toggle"
                          id="random_html_id"
                          role="switch"
                          type="button"
                        >
                          <span
                            class="euiSwitch__body"
                          >
                            <span
                              class="euiSwitch__thumb"
                            />
                            <span
                              class="euiSwitch__track"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoaded euiSwitch__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoaded euiSwitch__icon euiSwitch__icon--checked"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                        <span
                          class="euiSwitch__label"
                          id="random_html_id"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Value of N (count)
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Number of queries to collect within the window.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__labelWrapper"
                    >
                      <label
                        class="euiFormLabel euiFormRow__label"
                        for="random_html_id"
                      >
                        latency.top_n_size
                      </label>
                    </div>
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-describedby="random_html_id-help-0"
                            class="euiFieldNumber"
                            id="random_html_id"
                            max="100"
                            min="1"
                            required=""
                            type="number"
                            value="10"
                          />
                        </div>
                      </div>
                      <div
                        class="euiFormHelpText euiFormRow__text"
                        id="random_html_id-help-0"
                      >
                        Max allowed limit 100.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Window size
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Enter number + unit, e.g. 10m or 1h (minutes: 1–1440, hours: 1–24).
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__labelWrapper"
                    >
                      <label
                        class="euiFormLabel euiFormRow__label"
                        for="random_html_id"
                      >
                        latency.window_size
                      </label>
                    </div>
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-describedby="random_html_id-help-0"
                            class="euiFieldText"
                            data-test-subj="window-size-raw"
                            id="random_html_id"
                            placeholder="e.g. 10m or 1h"
                            type="text"
                            value="5m"
                          />
                        </div>
                      </div>
                      <div
                        class="euiFormHelpText euiFormRow__text"
                        id="random_html_id-help-0"
                      >
                        Examples: 15m, 45m, 1h, 6h.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero"
        >
          <div
            class="euiFlexItem"
          >
            <h2
              class="euiTitle euiTitle--small"
            >
              Statuses for configuration metrics
            </h2>
          </div>
          <div
            class="euiFlexItem"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiText euiText--small"
                >
                  Latency
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiSpacer euiSpacer--xs"
                />
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--primary euiIcon-isLoaded"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="8"
                          r="4"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      Enabled
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiText euiText--small"
                >
                  CPU Usage
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiSpacer euiSpacer--xs"
                />
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoaded"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="8"
                          r="4"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      Disabled
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiText euiText--small"
                >
                  Memory
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiSpacer euiSpacer--xs"
                />
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoaded"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="8"
                          r="4"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      Disabled
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrow6"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiForm"
          >
            <div
              class="euiFlexItem"
            >
              <h2
                class="euiTitle euiTitle--small"
              >
                Top N queries grouping configuration settings
              </h2>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGrid euiFlexGrid--gutterSmall euiFlexGrid--halves euiFlexGrid--responsive"
                style="padding: 15px 0px;"
              >
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Group By
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Specify the group by type.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <select
                            aria-label="Group by"
                            class="euiSelect"
                            id="random_html_id"
                            required=""
                          >
                            <option
                              value="none"
                            >
                              None
                            </option>
                            <option
                              value="similarity"
                            >
                              Similarity
                            </option>
                          </select>
                          <div
                            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <span
                              class="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoaded euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fill-rule="non-zero"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero"
        >
          <div
            class="euiFlexItem"
          >
            <h2
              class="euiTitle euiTitle--small"
            >
              Statuses for group by
            </h2>
          </div>
          <div
            class="euiFlexItem"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiText euiText--small"
                >
                  Group By
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiSpacer euiSpacer--xs"
                />
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoaded"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="8"
                          r="4"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      Disabled
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrow6"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiForm"
          >
            <div
              class="euiFlexItem"
            >
              <h2
                class="euiTitle euiTitle--small"
              >
                Query Insights export and data retention settings
              </h2>
            </div>
            <div
              class="euiFlexItem"
            >
              <div
                class="euiFlexGrid euiFlexGrid--gutterSmall euiFlexGrid--halves euiFlexGrid--responsive"
                style="padding: 15px 0px;"
              >
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Exporter
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Configure a sink for exporting Query Insights data.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <select
                            aria-label="Exporter type"
                            class="euiSelect"
                            id="random_html_id"
                            required=""
                          >
                            <option
                              value="local_index"
                            >
                              Local Index
                            </option>
                            <option
                              value="none"
                            >
                              None
                            </option>
                          </select>
                          <div
                            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <span
                              class="euiFormControlLayoutCustomIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoaded euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                  fill-rule="non-zero"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <dl
                    class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
                  >
                    <dt
                      class="euiDescriptionList__title"
                    >
                      <h3>
                        Delete After (days)
                      </h3>
                    </dt>
                    <dd
                      class="euiDescriptionList__description"
                    >
                      Number of days to retain Query Insights data.
                    </dd>
                  </dl>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            aria-label="Delete after days"
                            class="euiFieldNumber"
                            id="random_html_id"
                            max="180"
                            min="1"
                            type="number"
                            value="7"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrow2"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--flexGrowZero"
        >
          <div
            class="euiFlexItem"
          >
            <h2
              class="euiTitle euiTitle--small"
            >
              Statuses for data retention
            </h2>
          </div>
          <div
            class="euiFlexItem"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiText euiText--small"
                >
                  Exporter
                </div>
              </div>
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiSpacer euiSpacer--xs"
                />
                <div
                  class="euiHealth euiHealth--textSizeS"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--primary euiIcon-isLoaded"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="8"
                          r="4"
                        />
                      </svg>
                    </div>
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      Enabled
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
